--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
-    "sequelize": "^6.31.1"
+    "express-session": "^1.17.3",
+    "mysql2": "^3.6.0",
+    "sequelize": "^6.32.1"
   }
 }
