--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "express-session": "^1.17.3",
+    "mysql2": "^3.6.0",
     "sequelize": "^6.32.1"
   }
 }
